--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
@@ -10,3 +10,51 @@ body {
 }
 
 /* Add styles here! */
+
+header {
+}
+
+header .max-width-wrapper {
+  max-width: 650px;
+  margin: auto;
+  padding: 64px 0px;
+}
+
+.intro-chunk {
+  padding: 16px;
+}
+
+h1 {
+  margin-bottom: 32px;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+main .max-width-wrapper {
+  background-color: hsl(0deg, 0%, 30%);
+  border-top: 7px solid hsl(0deg, 0%, 60%);
+  padding: 64px 0px;
+}
+
+.card {
+  background-color: white;
+  max-width: 650px;
+  margin: auto;
+  padding-top: 8px;
+}
+
+h2 {
+  background-color: hsl(45deg, 100%, 50%);
+  border-bottom: 7px solid hsl(45deg, 100%, 40%);
+  width: fit-content;
+  padding: 8px 16px;
+  margin: 0;
+  margin-left: -8px;
+}
+
+.card p {
+  line-height: 1.5;
+  padding: 16px;
+  margin: 0;
+}
